--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React [RU] Tutorial</title>
+    <title>React</title>
   </head>
   <body>
-    <div id="root">Привет, я #root</div>
+    <div id="root"></div>
 
     <script src="js/react/react.js"></script>
     <script src="js/react/react-dom.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/react/browser.min.js"></script>
+    <script type="text/babel" src="js/app.js"></script>
   </body>
 </html>
